force-app/main/default/objects/Feedback_Response__c/Feedback_Response__c.object-meta.xml
<CustomObject>
    <description
  >One submitted post-trip feedback survey for a Booking. Created by the guest user through GxFeedbackService; individual item scores live on the child Feedback_Rating__c records.</description>
    <label>Feedback Response</label>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Feedback Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>