force-app/main/default/objects/Feedback_Response__c/fields/Consultation_Comment__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Comment__c</fullName>
    <description
  >Follow-up comment shown when the consultation rating is 8 or below.</description>
    <label>Consultation Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>