force-app/main/default/objects/Feedback_Response__c/fields/Consultation_Rating__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Rating__c</fullName>
    <description
  >Screen 1: quality of advice and product selection, 1-10.</description>
    <label>Consultation and Product Selection</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>