force-app/main/default/objects/Feedback_Response__c/fields/Follow_Up_By__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_By__c</fullName>
    <description
  >Who last changed the follow-up status. Set by the dashboard, not by hand.</description>
    <label>Follow-up By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedback_Follow_Ups</relationshipName>
    <type>Lookup</type>
</CustomField>