force-app/main/default/objects/Feedback_Response__c/fields/Follow_Up_Note__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Note__c</fullName>
    <description
  >What was done - "called, offered a voucher for the next stay". Without it, Contacted says that something happened but not what.</description>
    <label>Follow-up Note</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>