force-app/main/default/objects/Feedback_Response__c/fields/Follow_Up_On__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_On__c</fullName>
    <description
  >When the follow-up status last changed. Set by the dashboard, not by hand.</description>
    <label>Follow-up On</label>
    <type>DateTime</type>
</CustomField>