force-app/main/default/objects/Feedback_Response__c/fields/Follow_Up_Status__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Status__c</fullName>
    <description
  >Where the team has got to with an unhappy guest. Blank means nobody has picked it up, and the dashboard treats blank and Open alike as open work, so no automation is needed to set a starting value. Only meaningful for detractors, but not restricted to them - a neutral with a pointed comment may deserve a call too.</description>
    <inlineHelpText
  >Open, Contacted or Resolved. Set from the feedback dashboard.</inlineHelpText>
    <label>Follow-up Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Open</fullName><default>false</default><label
        >Open</label></value>
            <value><fullName>Contacted</fullName><default>false</default><label
        >Contacted</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label
        >Resolved</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>