force-app/main/default/objects/Feedback_Response__c/fields/General_Feedback__c.field-meta.xml
<CustomField>
    <fullName>General_Feedback__c</fullName>
    <description>Any further free-text feedback.</description>
    <label>General Feedback</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>