force-app/main/default/objects/Feedback_Response__c/fields/General_Golf_Comment__c.field-meta.xml
<CustomField>
    <fullName>General_Golf_Comment__c</fullName>
    <description
  >Screen 4 closing question: Weitere Anmerkungen oder Hinweise zu Ihren Golfplaetzen. Applies to the golf overall, not one course.</description>
    <label>General Golf Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>