force-app/main/default/objects/Feedback_Response__c/fields/General_Hotel_Comment__c.field-meta.xml
<CustomField>
    <fullName>General_Hotel_Comment__c</fullName>
    <description
  >Screen 3 closing question: Weitere Anmerkungen oder Hinweise zu Ihren Hotels. Applies to the stay as a whole, not one hotel.</description>
    <label>General Hotel Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>