force-app/main/default/objects/Feedback_Response__c/fields/Improvement_Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Improvement_Suggestions__c</fullName>
    <description
  >Closing remarks, suggestions or a personal message to the travel designer.</description>
    <label>Improvement Suggestions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>