force-app/main/default/objects/Feedback_Response__c/fields/Next_Destination__c.field-meta.xml
<CustomField>
    <fullName>Next_Destination__c</fullName>
    <description
  >Which destination, course or travel experience is next on the guest's wish list.</description>
    <label>Next Destination Wish</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>