force-app/main/default/objects/Feedback_Response__c/fields/NPS_Category__c.field-meta.xml
<CustomField>
    <fullName>NPS_Category__c</fullName>
    <description
  >Promoter / Neutral / Detractor derived from Recommendation_NPS__c. Note the survey uses a 1-10 scale, not the classic 0-10, and 9+ is the threshold that also triggers the public review invitation.</description>
    <formula>IF(
  ISBLANK(Recommendation_NPS__c), &quot;&quot;,
  IF(Recommendation_NPS__c &gt;= 9, &quot;Promoter&quot;,
    IF(Recommendation_NPS__c &gt;= 7, &quot;Neutral&quot;, &quot;Detractor&quot;)
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Category</label>
    <type>Text</type>
</CustomField>