force-app/main/default/objects/Feedback_Response__c/fields/Overall_Experience__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience__c</fullName>
    <description>Screen 1: overall impression of the trip, 1-10.</description>
    <label>Overall Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>