force-app/main/default/objects/Feedback_Response__c/fields/Overall_Experience_Comment__c.field-meta.xml
<CustomField>
    <fullName>Overall_Experience_Comment__c</fullName>
    <description
  >Follow-up comment shown when Overall Experience is 8 or below.</description>
    <label>Overall Experience Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>