force-app/main/default/objects/Feedback_Response__c/fields/Positive_Moment__c.field-meta.xml
<CustomField>
    <fullName>Positive_Moment__c</fullName>
    <description
  >The highlight moment of the trip, in the guest's words.</description>
    <label>Positive Moment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>