force-app/main/default/objects/Feedback_Response__c/fields/Public_Review_Prompted__c.field-meta.xml
<CustomField>
    <fullName>Public_Review_Prompted__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when the Trustpilot / Google Maps invitation was shown, i.e. the recommendation score was 9 or 10.</description>
    <label>Public Review Prompted</label>
    <type>Checkbox</type>
</CustomField>