force-app/main/default/objects/Feedback_Response__c/fields/Recommendation_NPS__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_NPS__c</fullName>
    <description
  >Screen 5: likelihood of recommending golf.extra, 0-10 (standard NPS). Scores of 9 or 10 trigger the public review invitation.</description>
    <label>Recommendation (NPS)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>