force-app/main/default/objects/Feedback_Response__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <description
  >When the guest submitted. Set server-side, never from the client.</description>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>