force-app/main/default/objects/Feedback_Response__c/fields/Sustainability_Importance__c.field-meta.xml
<CustomField>
    <fullName>Sustainability_Importance__c</fullName>
    <description
  >How important sustainability is to the guest, 1-10.</description>
    <label>Sustainability Importance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>