force-app/main/default/objects/Feedback_Response__c/listViews/All_Responses.listView-meta.xml
<ListView>
    <fullName>All_Responses</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Contact__c</columns>
    <columns>Overall_Experience__c</columns>
    <columns>Recommendation_NPS__c</columns>
    <columns>NPS_Category__c</columns>
    <columns>Submitted_On__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Responses</label>
</ListView>