force-app/main/default/objects/Feedback_Response__c/listViews/Detractors.listView-meta.xml
<ListView>
    <fullName>Detractors</fullName>
    <columns>NAME</columns>
    <columns>Booking__c</columns>
    <columns>Contact__c</columns>
    <columns>Recommendation_NPS__c</columns>
    <columns>Overall_Experience__c</columns>
    <columns>Improvement_Suggestions__c</columns>
    <columns>Submitted_On__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Recommendation_NPS__c</field>
        <operation>lessOrEqual</operation>
        <value>6</value>
    </filters>
    <label>Detractors</label>
</ListView>